bin/tests/snapshots/collapsible_let_in__fix_c5375cb32a35ebe59e49c3e9bbcf4de98e17b44db85caabc2ae1dca14f904c33.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  inherit pkgs;
in
let
  pkgs = pkgs.extend (import ./overlay.nix);
in
pkgs

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,8 +1,7 @@
 let
   inherit pkgs;
-in
-let
+
   pkgs = pkgs.extend (import ./overlay.nix);
 in
 pkgs
