bin/tests/snapshots/collapsible_let_in__fix_ec3d66168e4ffcb02f3a2c23ac1fa089104eb8bd25818f6b50220bec0385de20.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  inherit (foo) bar;
in
let
  bar = 1;
in
bar

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,8 +1,7 @@
 let
   inherit (foo) bar;
-in
-let
+
   bar = 1;
 in
 bar
