bin/tests/snapshots/collapsible_let_in__fix_f40f57bb65dbbd0f124aec8bcb999f04b601baca2a00bb5707eee6fc011adca9.snap
---
source: bin/tests/collapsible_let_in.rs
---
{
  pkgs ? import <nixpkgs> { },
}:
let
  pkgs' = pkgs.extend (import ./overlay.nix);
in
let
  pkgs = pkgs';
in
pkgs

---
