bin/tests/snapshots/collapsible_let_in__fix_f9545ef768954a51771885c60c1bca1a2592d2196b434317fc4dbda0f1125acf.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  a.b = 1;
in
let
  c = 2;
in
c
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,7 +1,6 @@
 let
   a.b = 1;
-in
-let
+
   c = 2;
 in
 c
