bin/tests/snapshots/collapsible_let_in__fix_fe25e67d93fa84cbd3753185f7f64e6307ab4d0d824f1546e179a513aa56f99a.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  x = f y;
in
let
  z = 1;
in
x

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,8 +1,7 @@
 let
   x = f y;
-in
-let
+
   z = 1;
 in
 x
