bin/tests/snapshots/collapsible_let_in__lint_18da6f292bd315cb247b50296420adbab5b7dce508fb8402cd4980a4cde9df89.snap
---
source: bin/tests/collapsible_let_in.rs
expression: "\"let\\n  a = 2;\\n  b = 3;\\nin\\nlet\\n  c = 5;\\n  d = 6;\\nin\\na + b + c + d\\n\""
---
[W06] Warning: These let-in expressions are collapsible
   ╭─[<temp_file_path>:1:1]
   │
 1 │ ╭───▶ let
 5 │ │ ╭─▶ let
 9 │ │ ├─▶ a + b + c + d
   · │ │               │   
   · │ ╰─────────────────── This let in expression is nested
   · │                 │   
   · ╰─────────────────┴─── This let in expression contains a nested let in expression
───╯
