bin/tests/snapshots/collapsible_let_in__lint_242e52309c5ca7eb4915bef9f7847ae24c06b7b315a440111776c6d18e110b0c.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  xs = [a b c ];
in
let
  a = 1;
in
xs

---
[W06] Warning: These let-in expressions are collapsible
   ╭─[<temp_file_path>:1:1]
   │
 1 │ ╭───▶ let
 4 │ │ ╭─▶ let
 7 │ │ ├─▶ xs
   · │ │    │   
   · │ ╰──────── This let in expression is nested
   · │      │   
   · ╰──────┴─── This let in expression contains a nested let in expression
───╯
