bin/tests/snapshots/collapsible_let_in__lint_2e638014232f7dec2606c940ad2e97f6bc6e69b287eb01500ede7d3ce0b7fbba.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  x = a.b;
in
let
  b = 1;
in
x

---
[W06] Warning: These let-in expressions are collapsible
   ╭─[<temp_file_path>:1:1]
   │
 1 │ ╭───▶ let
 4 │ │ ╭─▶ let
 7 │ │ ├─▶ x
   · │ │   │   
   · │ ╰─────── This let in expression is nested
   · │     │   
   · ╰─────┴─── This let in expression contains a nested let in expression
───╯
