bin/tests/snapshots/collapsible_let_in__lint_4140e8994d45a535d44e5aefd96a6be1bcd903057efd93fa8e3ac94897189d68.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  x = f a;
in
let
  a = 1;
in
x

---
[W06] Warning: These let-in expressions are collapsible
   ╭─[<temp_file_path>:1:1]
   │
 1 │ ╭───▶ let
 4 │ │ ╭─▶ let
 7 │ │ ├─▶ x
   · │ │   │   
   · │ ╰─────── This let in expression is nested
   · │     │   
   · ╰─────┴─── This let in expression contains a nested let in expression
───╯
