bin/tests/snapshots/collapsible_let_in__lint_c5375cb32a35ebe59e49c3e9bbcf4de98e17b44db85caabc2ae1dca14f904c33.snap
---
source: bin/tests/collapsible_let_in.rs
expression: "\"let\\n  inherit pkgs;\\nin\\nlet\\n  pkgs = pkgs.extend (import ./overlay.nix);\\nin\\npkgs\\n\""
---

