bin/tests/snapshots/collapsible_let_in__lint_ec3d66168e4ffcb02f3a2c23ac1fa089104eb8bd25818f6b50220bec0385de20.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  inherit (foo) bar;
in
let
  bar = 1;
in
bar

---
[W06] Warning: These let-in expressions are collapsible
   ╭─[<temp_file_path>:1:1]
   │
 1 │ ╭───▶ let
 4 │ │ ╭─▶ let
 7 │ │ ├─▶ bar
   · │ │     │   
   · │ ╰───────── This let in expression is nested
   · │       │   
   · ╰───────┴─── This let in expression contains a nested let in expression
───╯
